# encounter-builder

./: .gitignore  Cargo.toml  README.org  main.rs
.github/workflows/: build-production.yml  node.js.yml  rust.yml  server.yaml  web_scraper.yaml
api/: encounter_api.rs  monster_api.rs
e2e/: environment.d.ts  package-lock.json  package.json  tsconfig.json
e2e/src/: Data.ts  bbegData.ts  configurePage.ts  emptyData.ts  formData.ts  henchData.ts  index.ts  lackeyData.ts
e2e/src/test/: solo.ts  soloBbeg.ts  soloHench.ts  soloLackey.ts
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: app.html  styles.css
frontend/src/lib/: group.js  index.js
frontend/src/lib/components/: EitherRadio.svelte  Instructions.svelte  Modal.svelte  Monster.svelte  Radio.svelte  Select.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  Form.svelte  group.js  server.js
frontend/src/routes/encounter-builder/: +page.svelte  Budget.svelte  Form.svelte  group.js
frontend/src/routes/encounter-builder/instructions/: +page.svelte
handlers/: query.rs
internal/: encounter.rs  monster_budget.rs
server/: Cargo.toml
server/src/: api.rs  encounter.rs  encounter_api.rs  main.rs  monster.rs  monster_api.rs  query.rs
types/: encounter.rs  encounter_params.rs  error.rs  monster.rs  monster_params.rs  state.rs
web_scraper/src/: main.rs  parse_monster.rs
