[package]
name = "encounter-builder-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "encounter-builder-api"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.16", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }
dotenv = "0.15.0"
serde = "1.0.195"
serde_json = "1.0.111"
env_logger = "0.11.0"
log = "0.4.20"
